# CachyOS-Theme-Studio

./: README.md  RELEASE_CHECKLIST.md  cachyos-theme.mjs  chat.mjs  index.html  package-lock.json  package.json  server.mjs
.github/workflows/: ci.yml  release-artifacts.yml
e2e-tests/: .gitignore  README.md  package-lock.json  package.json  wdio.conf.mjs
e2e-tests/test/specs/: smoke.e2e.mjs
packaging/appstream/: com.cachyos.themestudio.appdata.xml
scripts/: build-appimage.sh  release-check.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
theme-studio/: app.js  index.html  styles.css  theme-core.mjs
