[package]
name = "cachyos_theme_studio"
version = "0.1.0"
description = "Desktop theme engine for CachyOS"
authors = ["OpenAI"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
